# itmo-dl-hws

./: .gitignore  README.md  pyproject.toml
hw1/: main.ipynb
hw2/: main.ipynb
hw_4/: .gitignore  main.ipynb
hw_5/: main.ipynb
hw_add_1/: .gitignore
