[tool.poetry]
name = "itmo-dl-hws"
version = "1.0.0"
description = ""
authors = ["Danil Muranov <danil5678444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
