[tool.poetry]
name = "itmo-dl-hws"
version = "1.0.0"
description = ""
authors = ["Danil Muranov <danil5678444@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
corus = "^0.10.0"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
nltk = "^3.9.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
