[project]
name = "itmo-dl-hws"
version = "1.0.0"
description = ""
authors = [
    { name = "Danil Muranov", email = "danil5678444@gmail.com" }
]

dependencies = [
    "corus>=0.10.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.6.1",
    "nltk>=3.9.1",
    "navec>=0.10.0",
    "gensim>=4.3.3",
    "pymorphy3>=2.0.3",
    "datasets>=3.5.0",
    "transformers[torch]>=4.51.2",
    "seqeval>=1.2.2",
    "evaluate>=0.4.3",
    "hf-xet>=1.0.3",
    "gliner>=0.2.17",
    "tiktoken>=0.9.0",
    "sentencepiece>=0.2.0",
]

requires-python = ">=3.10"

